02. js-portfolio-96-slider. Main page UI.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project</title>
+    <title>Project | Slider</title>
 </head>
 
 <body>
-    start
+    <div class="carousel">
+        <div class="list-img">
+            <div class="item">
+                <img src="assets/images/img1.png" alt="dragon">
+            </div>
+        </div>
+
+        <div class="box-info">
+            <div class="list-info">
+                <div class="info">
+                    <h2>Green Dragon</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Voluptas asperiores assumenda porro id earum perferendis
+                        reprehenderit. Iure corporis, placeat, eius quaerat maxime
+                        facilis accusantium at ut voluptatibus odit, tempore quasi.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Voluptas asperiores assumenda porro id earum perferendis
+                        reprehenderit. Iure corporis, placeat, eius quaerat maxime
+                        facilis accusantium at ut voluptatibus odit, tempore quasi.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Voluptas asperiores assumenda porro id earum perferendis
+                        reprehenderit. Iure corporis, placeat, eius quaerat maxime
+                        facilis accusantium at ut voluptatibus odit, tempore quasi.
+                    </p>
+                    <a href="#" class="btn">View More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="navigation">
+        <span class="prev-btn">
+            <i class="bx bx-chevron-left"></i>
+        </span>
+        <span class="next-btn">
+            <i class="bx bx-chevron-right"></i>
+        </span>
+    </div>
+
 
     <script src="./assets/js/main.js"></script>
 </body>
