--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
             <div class="item">
                 <img src="assets/images/img1.png" alt="dragon">
             </div>
+            <div class="item">
+                <img src="assets/images/img2.png" alt="dragon">
+            </div>
+            <div class="item">
+                <img src="assets/images/img3.png" alt="dragon">
+            </div>
+            <div class="item">
+                <img src="assets/images/img4.png" alt="dragon">
+            </div>
         </div>
 
         <div class="box-info">
@@ -28,11 +37,34 @@
                         reprehenderit. Iure corporis, placeat, eius quaerat maxime
                         facilis accusantium at ut voluptatibus odit, tempore quasi.
                     </p>
+                    <a href="#" class="btn">View More</a>
+                </div>
+
+                <div class="info">
+                    <h2>Red Dragon</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Voluptas asperiores assumenda porro id earum perferendis
                         reprehenderit. Iure corporis, placeat, eius quaerat maxime
                         facilis accusantium at ut voluptatibus odit, tempore quasi.
+                    </p>
+                    <a href="#" class="btn">View More</a>
+                </div>
+
+                <div class="info">
+                    <h2>Yellow Dragon</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Voluptas asperiores assumenda porro id earum perferendis
+                        reprehenderit. Iure corporis, placeat, eius quaerat maxime
+                        facilis accusantium at ut voluptatibus odit, tempore quasi.
+                    </p>
+                    <a href="#" class="btn">View More</a>
+                </div>
+
+                <div class="info">
+                    <h2>Pink Dragon</h2>
+                    <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Voluptas asperiores assumenda porro id earum perferendis
                         reprehenderit. Iure corporis, placeat, eius quaerat maxime
